resolve main layout issue

--- a/scss/scss/_layout.scss
+++ b/scss/scss/_layout.scss
@@ -16,7 +16,7 @@
 
                     @extend .d-flex;
                     @extend .h-100;
-                    @extend pb-4;
+                    @extend .pb-5;
 
                     .left-panel {
                         @extend .pt-4;
